package ca.mcmaster.se2aa4.mazerunner;
public interface MazeFunctions {
     /**
     * Do the entered Maze function and return.
     *
     */
    public void impliment() throws IllegalArgumentException;
}
